--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(interactive-app)
+project(interactive-dmd)
 
 # CMAKE MINIMUM VERSION
 cmake_minimum_required(VERSION 3.10)
@@ -18,13 +18,15 @@ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
 # SOURCES
-file(GLOB_RECURSE PROJECT_SOURCE "{CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE PROJECT_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
 # MOC SOURCE
+qt5_wrap_cpp(PROJECT_SOURCE 
+  include/MainWindow.hpp)
 
 # EXECUTABLES
-add_executable(interactive-app ${PROJECT_SOURCE})
-target_link_libraries(interactive-app PUBLIC
+add_executable(interactive-dmd ${PROJECT_SOURCE})
+target_link_libraries(interactive-dmd PUBLIC
   ${CONAN_LIBS}
   Qt5::Widgets
   Qt5::Core
