inspect node and new select node mechanism implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ graph_info.json
 
 # ======================================= STB LIBRARY ===================================
 stb/*
+include/stb/*
 
 # ====================================== Build dir =========================================
 build/*
@@ -120,3 +121,4 @@ debug/*
 
 # ====================================== image =========================================
 image/*
+
