--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ qt5_wrap_cpp(PROJECT_SOURCE
   include/MainWidget.hpp
   include/TreeVisualiser/RecNodeButton.hpp
   include/TreeVisualiser/TreeVisualiser.hpp
-  include/TreeVisualiser/SimpleImageViewer.hpp)
+  include/TreeVisualiser/SimpleImageViewer.hpp
+  include/CustomWidgets/LabelWithProgressBar.hpp)
 
 # SET RESOURCE FILES
 qt5_add_resources(PROJECT_SOURCE resources.qrc)
