Area ColorBar implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ qt5_wrap_cpp(PROJECT_SOURCE
   include/TreeVisualiser/SimpleImageViewer.hpp
   include/InteractiveSdmd.hpp
   include/CustomWidgets/LabelWithProgressBar.hpp
-  include/CustomWidgets/ClosableDockWidget.hpp)
+  include/CustomWidgets/ClosableDockWidget.hpp
+  include/CustomWidgets/TitleColorBar.hpp)
 
 # SET RESOURCE FILES
 qt5_add_resources(PROJECT_SOURCE resources.qrc)
