--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ qt5_wrap_cpp(PROJECT_SOURCE
   include/TreeVisualiser/TreeVisualiser.hpp
   include/TreeVisualiser/SimpleImageViewer.hpp
   include/InteractiveSdmd.hpp
+  include/scribbleWidget.hpp
   include/CustomWidgets/LabelWithProgressBar.hpp
   include/CustomWidgets/ClosableDockWidget.hpp
   include/CustomWidgets/TitleColorBar.hpp
