collapsed panel implementaiton.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ qt5_wrap_cpp(PROJECT_SOURCE
   include/TreeVisualiser/RecNodeButton.hpp
   include/TreeVisualiser/TreeVisualiser.hpp
   include/TreeVisualiser/SimpleImageViewer.hpp
+  include/TreeVisualiser/TreeVisualiserStylePanel.hpp
   include/InteractiveSdmd.hpp
   include/scribbleWidget.hpp
   include/CustomWidgets/LabelWithProgressBar.hpp
