rotate morphotree widget and small bug fixes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
     "set": "cpp",
     "iostream": "cpp",
     "mutex": "cpp",
-    "thread": "cpp"
+    "thread": "cpp",
+    "future": "cpp"
   }
 }
