Display info when the mouse hovers over the button

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ qt5_wrap_cpp(PROJECT_SOURCE
   include/ManipulateCPs/ManipulateCPs.hpp
   include/ManipulateCPs/CpViewer.hpp
   include/ManipulateCPs/node.hpp
-  include/ManipulateCPs/edge.hpp)
+  include/ManipulateCPs/edge.hpp
+  include/ManipulateCPs/AddHoverInfoPushButton.hpp)
 
 # SET RESOURCE FILES
 qt5_add_resources(PROJECT_SOURCE resources.qrc)
