--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "mutex": "cpp",
     "thread": "cpp",
     "future": "cpp",
-    "qpushbutton": "cpp"
+    "qpushbutton": "cpp",
+    "__node_handle": "cpp"
   }
 }
